--- a/day19/requirements.txt
+++ b/day19/requirements.txt
@@ -1,3 +1,27 @@
+astroid==2.3.3
+backcall==0.1.0
+colorama==0.4.1
+decorator==4.4.1
 Django==2.2.7
+django-extensions==2.2.5
+Faker==2.0.4
+ipython==7.10.1
+ipython-genutils==0.2.0
+isort==4.3.21
+jedi==0.15.1
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+parso==0.5.1
+pickleshare==0.7.5
+prompt-toolkit==3.0.2
+Pygments==2.5.2
+pylint==2.4.4
+python-dateutil==2.8.1
 pytz==2019.3
+six==1.13.0
 sqlparse==0.3.0
+text-unidecode==1.3
+traitlets==4.3.3
+typed-ast==1.4.0
+wcwidth==0.1.7
+wrapt==1.11.2
