--- a/day19/requirements.txt
+++ b/day19/requirements.txt
@@ -1,8 +1,10 @@
 astroid==2.3.3
 backcall==0.1.0
+beautifulsoup4==4.8.1
 colorama==0.4.1
 decorator==4.4.1
 Django==2.2.7
+django-bootstrap4==1.0.1
 django-extensions==2.2.5
 Faker==2.0.4
 ipython==7.10.1
@@ -19,6 +21,7 @@ pylint==2.4.4
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.13.0
+soupsieve==1.9.5
 sqlparse==0.3.0
 text-unidecode==1.3
 traitlets==4.3.3
